--- a/lapor.html
+++ b/lapor.html
@@ -22,9 +22,6 @@
 </head>
 
 <body>
-    <figure class="mybg">
-        <img src="assets/kantor.jpg" alt="">
-    </figure>
     <!-- Navbar -->
     <nav class="container-navbar">
         <a href="index.html">
@@ -90,48 +87,123 @@
         </ul>
     </nav> <!-- navbar end -->
 
-    <div class="container-down-surat">
-        <div class="title-down-surat">
-            <h2>SURAT PAKTA INTEGRITAS</h2>
+    <!-- icon langsung ke top -->
+    <i id="scrollToTopBtn" title="Go to top" class="fa-solid fa-circle-up"></i>
+
+
+    <!-- bg -->
+    <figure class="mybg">
+        <img src="assets/kantor.jpg" alt="">
+    </figure>
+
+    <main>
+        <div class="container-cara-melapor">
+            <div class="cara-melapor-title">
+                <h2>LAYANAN PENGADUAN</h2>
+                <img src="assets/line lapor.png" alt="">
+                <h2>SISTEM MANAJEMEN INTEGRASI</h2>
+            </div>
+            <div class="cara-melapor-content">
+                <div class="cara-melapor-tutor">
+                    <h3><i class="fa-brands fa-readme"></i> Cara Melapor:</h3>
+                    <div class="tutor-lapor">
+                        <ol>
+                            <li>Klik tombol 'Lapor';</li>
+                            <li>Silahkan baca terlebih dahulu cara melapor;</li>
+                            <li>Setelah itu pilih masalah yang akan anda laporkan sesuai dengan bidangnya;</li>
+                            <li>Isi formulir pelaporan sesuai dengan informasi yang anda ketahui, hal yang harus
+                                diperhatikan:</li>
+                            <ol class="anak" type="a">
+                                <li>Semua kotak yang diberi tanda (*) wajib di isi;</li>
+                                <li>Pastikan informasi yang diberikan sedapat mungkin memenuhi unsur 4W + 1H;</li>
+                                <li>Jika anda memiliki bukti dalam bentuk file seperti foto atau dokumen lain, silahkan;
+                                </li>
+                            </ol>
+                            <li>Setelah selesai mengisi, silahkan klik tombol "Kirim" untuk melanjutkan atau klik tombol
+                                "Reset" untuk membatalkan proses pelaporan.</li>
+                        </ol>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="container-down-surat-content">
-            <div class="add-surat">
-                <a href="index.html#isi-form">
-                    <h5><i class="fa-solid fa-square-plus"></i> Buat Surat Baru</h5>
+
+        <div class="container-layanan-pengaduan">
+            <div class="layanan-pengaduan-title">
+                <h2>Layanan Pengaduan</h2>
+                <img src="assets/pembatas.png" alt="">
+            </div>
+            <div class="container-layanan-content">
+                <a href="https://wbs.pertanian.go.id/" class="layanan-content-isi">
+                    <div class="layanan-content-title">
+                        <figure class="layanan-img">
+                            <img src="assets/wbs.jpeg" alt="">
+                        </figure>
+                        <span class="view-text">View</span>
+                    </div>
+                    <h5>WhistleBlower's System (WBS) Kementrian Pertanian</h5>
+                </a>
+                <a href="https://wa.me/6281112122023" class="layanan-content-isi">
+                    <div class="layanan-content-title">
+                        <figure class="layanan-img">
+                            <img src="assets/siintan.jpeg" alt="">
+                        </figure>
+                        <span class="view-text">View</span>
+                    </div>
+                    <h5>WA SIINTAN <br> (WhatsApp Saluran Informasi Kementrian Pertanian)</h5>
+                </a>
+                <a href="https://dumas.pertanian.go.id/" class="layanan-content-isi">
+                    <div class="layanan-content-title">
+                        <figure class="layanan-img">
+                            <img src="assets/dumas.jpeg" alt="">
+                        </figure>
+                        <span class="view-text">View</span>
+                    </div>
+                    <h5>KALDU EMAS <br> (Kanal Pengaduan Elektronik Bagi Masyarakat)
+                        <br>Kementrian Pertanian</h5>
+                </a>
+                <a href="https://sigap-upg.pertanian.go.id/" class="layanan-content-isi">
+                    <div class="layanan-content-title">
+                        <figure class="layanan-img">
+                            <img src="assets/sigap.jpeg" alt="">
+                        </figure>
+                        <span class="view-text">View</span>
+                    </div>
+                    <h5>UPG SIGAP <br> (Sistem Informasi Gratifikasi Pertanian)</h5>
+                </a>
+                <a href="https://www.lapor.go.id/" class="layanan-content-isi">
+                    <div class="layanan-content-title">
+                        <figure class="layanan-img">
+                            <img src="assets/span.jpg" alt="">
+                        </figure>
+                        <span class="view-text">View</span>
+                    </div>
+                    <h5>Layanan Aspirasi dan Pengaduan Online Rakyat</h5>
+                </a>
+                <a href="https://form.jotform.com/212288407937060" class="layanan-content-isi">
+                    <div class="layanan-content-title">
+                        <figure class="layanan-img">
+                            <img src="assets/gsi.png" alt="">
+                        </figure>
+                        <span class="view-text">View</span>
+                    </div>
+                    <h5>Lapor SPG! <br>Lapor Penolakan Suap Pungli</h5>
+                </a>
+                <a href="https://docs.google.com/document/d/1btODQp8yFu-Z_XMPkGhrpju69Ja-jA4V/edit?usp=sharing&ouid=115175528271640506706&rtpof=true&sd=true"
+                    class="layanan-content-isi">
+                    <div class="layanan-content-title">
+                        <figure class="layanan-img">
+                            <img src="assets/k3.png" alt="">
+                        </figure>
+                        <span class="view-text">View</span>
+                    </div>
+                    <h5>Lapor Kecelakaan Kerja K3 BPMSPH</h5>
                 </a>
             </div>
-            <table class="table-down-surat">
-                <thead>
-                    <tr>
-                        <th>No</th>
-                        <th>Nama Lengkap</th>
-                        <th>Jabatan</th>
-                        <th>Instansi</th>
-                        <th>Email</th>
-                        <th>No Handphone/ Wa</th>
-                        <th>Print/PDF</th>
-                        <th>Edit</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>1</td>
-                        <td>Rafly Rahmat Amtiar</td>
-                        <td>Magang</td>
-                        <td>Badan Pengujian Mutu dan Sertifikasi Produk Hewan</td>
-                        <td>raflyamtiar93@gmail.com</td>
-                        <td>089897613178</td>
-                        <td><i class="fa-solid fa-print"></i></td>
-                        <td><i class="fa-solid fa-pen"></i></td>
-                    </tr>
-                </tbody>
-            </table>
         </div>
-    </div>
 
-    </div>
 
     </main>
+
     <footer>
         <div class="footer-container">
             <div class="footer-address">
@@ -161,6 +233,7 @@
                 SERTIFIKASI PRODUK HEWAN <span>Hak Cipta&copy;2024 BPMSPH. Semua Hak Dilindungi</span></p>
         </div>
     </footer>
+    <script src="script.js"></script>
 
 </body>
 
