--- a/login.html
+++ b/login.html
@@ -44,8 +44,8 @@
                 </div>
                 <h3>SILAHKAN LOGIN</h3>
                 <form action="" method="">
-                    <input type="text" name="username" placeholder="Username" required>
-                    <input type="password" name="password" placeholder="Password" required>
+                    <input type="text" id="username-login" name="username-login" placeholder="Username" required>
+                    <input type="password" id="password-login" name="password-login" placeholder="Password" required>
                     <button type="submit">LOGIN</button>
                 </form>
             </div>
