--- a/admin/admin-auditor.html
+++ b/admin/admin-auditor.html
@@ -18,7 +18,7 @@
         integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="../style/style.css" />
 </head>
 
 <body>
@@ -30,7 +30,7 @@
 
     <div class="container-admin">
         <div class="sidebar-admin">
-            <a href="home-admin.html">
+            <a href="index.html">
                 <div class="box-admin">
                     <h3>Beranda</h3>
                 </div>
@@ -90,6 +90,23 @@
                 </thead>
                 <tbody>
                     <!-- Contoh Baris Tabel -->
+                    <tr>
+                        <td>1</td>
+                        <td>Rafly Rahmat Amtiar</td>
+                        <td>Magang</td>
+                        <td>Balai pengujian mutu dans ertifikasi produk hean</td>
+                        <td>amtiar@unp.ac.id</td>
+                        <td>0898763214</td>
+                        <td>
+                            <div class="icon-action print"><i class="fa fa-print"></i></div>
+                        </td>
+                        <td>
+                            <div class="icon-action pencil"><i class="fa fa-pencil"></i></div>
+                        </td>
+                        <td>
+                            <div class="icon-action trash"><i class="fa fa-trash"></i></div>
+                        </td>
+                    </tr>
                     <tr>
                         <td>1</td>
                         <td>Rafly Rahmat Amtiar</td>
