--- a/admin/admin-pengguna.html
+++ b/admin/admin-pengguna.html
@@ -18,7 +18,7 @@
         integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="../style/style.css" />
 </head>
 
 <body>
@@ -30,7 +30,7 @@
 
     <div class="container-admin">
         <div class="sidebar-admin">
-            <a href="home-admin.html">
+            <a href="index.html">
                 <div class="box-admin">
                     <h3>Beranda</h3>
                 </div>
@@ -60,7 +60,7 @@
         </div>
         <div class="content-admin">
             <header>
-                <h1>Tabel Formulir Pakta Integritas Pegawai</h1>
+                <h1>Tabel Formulir Pakta Integritas Pengguna Jasa</h1>
             </header>
             <hr class="header-line">
 
@@ -93,7 +93,7 @@
                     <tr>
                         <td>1</td>
                         <td>Rafly Rahmat Amtiar</td>
-                        <td>Magang</td>
+                        <td>Magang baru</td>
                         <td>Balai pengujian mutu dans ertifikasi produk hean</td>
                         <td>amtiar@unp.ac.id</td>
                         <td>0898763214</td>
@@ -112,7 +112,7 @@
                         <td>Rafly Rahmat Amtiar</td>
                         <td>Magang</td>
                         <td>Balai pengujian mutu dans ertifikasi produk hean</td>
-                        <td>amtiar@unp.ac.id</td>
+                        <td>amtiar@student.unpak.ac.id</td>
                         <td>0898763214</td>
                         <td>
                             <div class="icon-action print"><i class="fa fa-print"></i></div>
