--- a/admin/admin-penyedia.html
+++ b/admin/admin-penyedia.html
@@ -18,7 +18,7 @@
         integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="../style/style.css" />
 </head>
 
 <body>
@@ -30,7 +30,7 @@
 
     <div class="container-admin">
         <div class="sidebar-admin">
-            <a href="home-admin.html">
+            <a href="index.html">
                 <div class="box-admin">
                     <h3>Beranda</h3>
                 </div>
@@ -60,7 +60,7 @@
         </div>
         <div class="content-admin">
             <header>
-                <h1>Tabel Formulir Pakta Integritas Pengguna Jasa</h1>
+                <h1>Tabel Formulir Pakta Integritas Penyedia Jasa</h1>
             </header>
             <hr class="header-line">
 
