--- a/admin/index.html
+++ b/admin/index.html
@@ -18,7 +18,7 @@
         integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="../style/style.css" />
 </head>
 
 <body>
@@ -30,7 +30,7 @@
 
     <div class="container-admin">
         <div class="sidebar-admin">
-            <a href="home-admin.html">
+            <a href="index.html">
                 <div class="box-admin">
                     <h3>Beranda</h3>
                 </div>
@@ -68,25 +68,25 @@
                     <h2>Pakta Integritas Pegawai</h2>
                     <p>Jumlah</p>
                     <h3>60</h3>
-                    <img src="assets/icon-note.svg" alt="Document Icon">
+                    <img src="../assets/icon-note.svg" alt="Document Icon">
                 </div>
                 <div class="card blue">
                     <h2>Pakta Integritas Penyedia Jasa</h2>
                     <p>Jumlah</p>
                     <h3>60</h3>
-                    <img src="assets/icon-note.svg" alt="Document Icon">
+                    <img src="../assets/icon-note.svg" alt="Document Icon">
                 </div>
                 <div class="card yellow">
                     <h2>Pakta Integritas Pengguna Jasa</h2>
                     <p>Jumlah</p>
                     <h3>60</h3>
-                    <img src="assets/icon-note.svg" alt="Document Icon">
+                    <img src="../assets/icon-note.svg" alt="Document Icon">
                 </div>
                 <div class="card red">
                     <h2>Pakta Integritas Auditor</h2>
                     <p>Jumlah</p>
                     <h3>60</h3>
-                    <img src="assets/icon-note.svg" alt="Document Icon">
+                    <img src="../assets/icon-note.svg" alt="Document Icon">
                 </div>
             </div>
         </div>
